# drawio-discover

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
drawio_discover/: __main__.py
drawio_discover/diagrams/: drawio.py  package.py  utils.py
drawio_discover/discoverer/: discoverer.py
drawio_discover/discovrerer/: discoverer.py
drawio_discover/models/: folder.py
drawio_discover/models/drawio/: package.py  package_properties.py  utils.py
tests/diagrams/: test_utils.py
tests/discoverer/: test_discoverer.py
tests/models/: test_folder.py
